--- a/Dedication.html
+++ b/Dedication.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="zh-CN">
 <head>
     <meta charset="UTF-8">
     <title>语音转文本</title>
@@ -15,32 +15,39 @@
         const stopButton = document.getElementById("stopButton");
         const transcript = document.getElementById("transcript");
 
-        const recognition = new webkitSpeechRecognition(); // 使用Web Speech API
+        // 检测浏览器对SpeechRecognition API的支持
+        let SpeechRecognition = window.SpeechRecognition || window.webkitSpeechRecognition;
+        if (typeof SpeechRecognition === "undefined") {
+            alert("您的浏览器不支持SpeechRecognition API，请使用支持该API的浏览器。");
+            startButton.setAttribute("disabled", "disabled");
+            return;
+        }
 
-        recognition.continuous = true; // 持续识别语音
-        recognition.interimResults = true; // 实时获取中间结果
+        const recognition = new SpeechRecognition();
+        recognition.lang = "zh-CN"; // 设置语言为中文
 
         recognition.onresult = function(event) {
-            const result = event.results[event.results.length - 1];
-            const text = result[0].transcript;
-            transcript.textContent = text;
+            transcript.textContent = event.results[0][0].transcript;
         };
 
         recognition.onend = function() {
-            startButton.style display = "inline";
-            stopButton.style display = "none";
+            startButton.style.display = "inline";
+            stopButton.style.display = "none";
         };
 
         startButton.addEventListener("click", function() {
-            recognition.start();
+            try {
+                recognition.start();
+            } catch (error) {
+                console.error("语音识别启动错误:", error);
+                alert("无法启动语音识别，请确保您授权使用麦克风。");
+            }
             startButton.style.display = "none";
             stopButton.style.display = "inline";
         });
 
         stopButton.addEventListener("click", function() {
             recognition.stop();
-            startButton.style.display = "inline";
-            stopButton.style.display = "none";
         });
     </script>
 </body>
