--- a/Dedication.html
+++ b/Dedication.html
@@ -1,54 +1,45 @@
 <!DOCTYPE html>
-<html lang="zh-CN">
+<html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <title>语音转文本</title>
+<meta charset="UTF-8">
+<title>Audio Recorder for iOS</title>
 </head>
 <body>
-    <h1>语音转文本</h1>
-    <button id="startButton">开始录音</button>
-    <button id="stopButton" style="display:none;">停止录音</button>
-    <div id="transcript"></div>
 
-    <script>
-        const startButton = document.getElementById("startButton");
-        const stopButton = document.getElementById("stopButton");
-        const transcript = document.getElementById("transcript");
+<button id="startRecord">Start Recording</button>
+<button id="stopRecord" disabled>Stop Recording</button>
+<audio id="audioPlayback" controls></audio>
 
-        // 检测浏览器对SpeechRecognition API的支持
-        let SpeechRecognition = window.SpeechRecognition || window.webkitSpeechRecognition;
-        if (typeof SpeechRecognition === "undefined") {
-            alert("您的浏览器不支持SpeechRecognition API，请使用支持该API的浏览器。");
-            startButton.setAttribute("disabled", "disabled");
-            return;
-        }
+<script>
+  let mediaRecorder;
+  let audioChunks = [];
 
-        const recognition = new SpeechRecognition();
-        recognition.lang = "zh-CN"; // 设置语言为中文
-
-        recognition.onresult = function(event) {
-            transcript.textContent = event.results[0][0].transcript;
+  document.getElementById("startRecord").addEventListener("click", function() {
+    navigator.mediaDevices.getUserMedia({ audio: true })
+      .then(stream => {
+        mediaRecorder = new MediaRecorder(stream);
+        mediaRecorder.ondataavailable = function(event) {
+          audioChunks.push(event.data);
         };
-
-        recognition.onend = function() {
-            startButton.style.display = "inline";
-            stopButton.style.display = "none";
+        mediaRecorder.onstop = function() {
+          const audioBlob = new Blob(audioChunks);
+          const audioUrl = URL.createObjectURL(audioBlob);
+          document.getElementById("audioPlayback").src = audioUrl;
         };
+        mediaRecorder.start();
+        document.getElementById("startRecord").disabled = true;
+        document.getElementById("stopRecord").disabled = false;
+        audioChunks = [];
+      })
+      .catch(error => console.error(error));
+  });
 
-        startButton.addEventListener("click", function() {
-            try {
-                recognition.start();
-            } catch (error) {
-                console.error("语音识别启动错误:", error);
-                alert("无法启动语音识别，请确保您授权使用麦克风。");
-            }
-            startButton.style.display = "none";
-            stopButton.style.display = "inline";
-        });
+  document.getElementById("stopRecord").addEventListener("click", function() {
+    mediaRecorder.stop();
+    document.getElementById("startRecord").disabled = false;
+    document.getElementById("stopRecord").disabled = true;
+  });
+</script>
 
-        stopButton.addEventListener("click", function() {
-            recognition.stop();
-        });
-    </script>
 </body>
 </html>
