--- a/1.html
+++ b/1.html
@@ -17,10 +17,23 @@
         h1, p {
             text-align: center;
         }
+
+        #startButton {
+            padding: 10px 20px;
+            font-size: 16px;
+            cursor: pointer;
+        }
     </style>
 </head>
 <body>
     <h1>你好初学者</h1>
     <p>欢迎来到我的网页！</p>
+    <button id="startButton" onclick="startRecording()">请点击此处开始</button>
+
+    <script>
+        function startRecording() {
+            window.location.href = 'record.html';
+        }
+    </script>
 </body>
 </html>
