--- a/1.html
+++ b/1.html
@@ -32,7 +32,7 @@
 
     <script>
         function startRecording() {
-            window.location.href = 'record.html';
+            window.location.href = 'Dedication.html';
         }
     </script>
 </body>
