--- a/1.html
+++ b/1.html
@@ -35,11 +35,11 @@
 
     <script>
         function startRecording() {
-            window.location.href = 'record.html';
+            window.location.href = 'Dedication.html';
         }
 
         function startCustomPage() {
-            window.location.href = 'custom.html';
+            window.location.href = '自定义.html';
         }
     </script>
 </body>
