--- a/自定义.html
+++ b/自定义.html
@@ -31,6 +31,7 @@
             position: absolute;
             top: 50%;
             left: 50%;
+            -webkit-transform: translate(-50%, -50%); /* Safari 前缀 */
             transform: translate(-50%, -50%);
             padding: 20px;
             background-color: #fff;
