--- a/自定义.html
+++ b/自定义.html
@@ -25,60 +25,19 @@
             cursor: pointer;
             margin-top: 10px;
         }
-
-        #customDialog {
-            display: none;
-            position: fixed;
-            top: 50%;
-            left: 50%;
-            transform: translate(-50%, -50%);
-            -webkit-transform: translate(-50%, -50%);
-            padding: 20px;
-            background-color: #fff;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
-            z-index: 999;
-        }
-
-        #overlay {
-            display: none;
-            position: fixed;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-            background: rgba(0, 0, 0, 0.5);
-            z-index: 998;
-        }
     </style>
 </head>
 <body>
     <h1>自定义网页</h1>
     <p>点击下面按钮开始自定义：</p>
-    <button class="button" onclick="showCustomDialog()">显示对话框</button>
-
-    <div id="overlay"></div>
-    <div id="customDialog">
-        <p>请输入文本：</p>
-        <textarea id="textInput" rows="4" cols="50"></textarea>
-        <button class="button" onclick="saveText()">保存文本</button>
-        <button class="button" onclick="closeCustomDialog()">关闭对话框</button>
-    </div>
+    <button class="button" onclick="showPrompt()">显示对话框</button>
 
     <script>
-        function showCustomDialog() {
-            document.getElementById('customDialog').style.display = 'block';
-            document.getElementById('overlay').style.display = 'block';
-        }
-
-        function closeCustomDialog() {
-            document.getElementById('customDialog').style.display = 'none';
-            document.getElementById('overlay').style.display = 'none';
-        }
-
-        function saveText() {
-            let text = document.getElementById('textInput').value;
-            alert('保存的文本：' + text);
-            closeCustomDialog();
+        function showPrompt() {
+            let userInput = prompt("请输入文本：", "");
+            if (userInput !== null) {
+                alert('保存的文本：' + userInput);
+            }
         }
     </script>
 </body>
